--- a/WRM/coding/assets/css/main.css
+++ b/WRM/coding/assets/css/main.css
@@ -38,6 +38,17 @@
     }
 }
 
+@media (max-width:800px) {
+    #section .title>h1 {
+        font-size: 12rem;
+    }
+
+    #section .title {
+        margin-top: 6rem;
+        text-align: center;
+    }
+}
+
 @media (max-width:500px) {
     #section {
         height: 40vh;
@@ -126,6 +137,32 @@
     }
 }
 
+@media (max-width:800px) {
+    .main__banner {
+        height: 90vh;
+        /* 높이를 줄입니다 */
+    }
+
+    .main__banner .container {
+        width: 100%;
+        height: 100%;
+        border-radius: 20rem 20rem 1.875rem 1.875rem;
+    }
+
+    .main__banner .container>img {
+        width: 100%;
+        height: 100%;
+        /* 이미지 비율 유지 */
+    }
+
+    .main__banner .container a {
+        padding: 1rem 2rem;
+        /* 모바일에서의 버튼 패딩 줄임 */
+        font-size: 0.875rem;
+        /* 모바일에서의 폰트 크기 줄임 */
+    }
+}
+
 @media (max-width:500px) {
     .main__banner {
         height: 40vh;
@@ -153,4 +190,252 @@
     width: 100%;
     height: 100%;
     background-color: var(--mainColor);
+    display: flex;
+    flex-direction: column;
+    margin-top: 12.5rem;
+}
+
+.main__our .container {
+    display: flex;
+}
+
+.main__our .container .content1 {
+    width: 50%;
+    height: 100%;
+    padding-top: 9.375rem;
+}
+
+.main__our .container .content1 h2 {
+    width: 80%;
+    font-family: var(--fontM);
+    font-weight: 900;
+    font-size: 3.75rem;
+    padding: 1rem 1.87rem;
+    background-color: var(--white);
+    color: var(--mainColor);
+    text-align: center;
+    border-radius: 1.25rem;
+}
+
+.main__our .container .content1 p {
+    padding-top: 3.125rem;
+    line-height: 1.8;
+    color: var(--white);
+    font-family: var(--fontN);
+    font-weight: 500;
+    font-size: 1.25rem;
+
+}
+
+.main__our .container .content2 {
+    width: 50%;
+    height: 100%;
+    padding-top: 11.175rem;
+}
+
+.main__our .container .content2 .box {
+    width: 50%;
+    height: 50%;
+    background-color: var(--white);
+    text-align: center;
+    border-radius: 1.25rem;
+}
+
+.main__our .container .content2 .box img {
+    width: 70%;
+    height: 40%;
+    padding: 2rem;
+}
+
+.main__our .container .content2 p {
+    color: var(--white);
+    font-family: var(--fontN);
+    padding-top: 2.5rem;
+    padding-bottom: 10rem;
+    font-size: 1.25rem;
+}
+
+@media (max-width:1000px) {
+
+    .main__our .container {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .main__our .container .content1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .main__our .container .content1 h2 {
+        font-size: 3rem;
+        width: 100%;
+    }
+
+    .main__our .container .content1 p {
+        padding: 1rem;
+
+    }
+
+    .main__our .container .content2 {
+        padding-top: 5rem;
+        width: 100%;
+        display: flex;
+        margin-bottom: 7rem;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .main__our .container .content2 .box {
+        width: 40%;
+        height: 40%;
+    }
+
+    .main__our .container .content2 p {
+        width: 50%;
+        padding: 1.25rem;
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width:500px) {
+    #main .main__our {
+        margin-top: 5rem;
+    }
+
+    .main__our .container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .main__our .container .content1 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 5rem;
+    }
+
+    .main__our .container .content1 h2 {
+        font-size: 2rem;
+        width: 80%;
+    }
+
+    .main__our .container .content1 p {
+        padding: 0.875rem;
+        text-align: center;
+        font-size: 1rem;
+
+    }
+
+    .main__our .container .content2 {
+        padding-top: 5rem;
+        width: 100%;
+        display: flex;
+        margin-bottom: 7rem;
+        flex-direction: column;
+    }
+
+    .main__our .container .content2 .box {
+        width: 80%;
+        height: 100%;
+    }
+
+    .main__our .container .content2 .box img {
+        width: 50%;
+        height: 50%;
+        padding: 2rem;
+    }
+
+    .main__our .container .content2 p {
+        width: 80%;
+        padding: 1rem;
+        font-size: 0.875rem;
+        line-height: 1.5;
+        padding-bottom: 1rem;
+    }
+}
+
+/* //main__our */
+
+.main__info .container .main__info__title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 10rem;
+    color: var(--mainColor);
+}
+
+.main__info__title h3 {
+    text-transform: uppercase;
+    font-family: var(--fontO);
+    letter-spacing: -1px;
+    font-size: 2.875rem;
+    padding: 0.625rem;
+}
+
+
+.main__info__title p {
+    font-size: 1.25rem;
+    font-family: var(--fontN);
+    font-weight: 400;
+}
+
+@media (max-width:1000px) {
+    .main__info__title h3 {
+        font-size: 2.6rem;
+    }
+
+    .main__info__title p {
+        font-size: 1rem;
+    }
+
+}
+
+@media (max-width:500px) {
+    .main__info__title h3 {
+        font-size: 2rem;
+    }
+
+    .main__info__title p {
+        font-size: 1rem;
+    }
+
+}
+
+.main__info__post .container {
+    width: 100%;
+    height: 100%;
+}
+
+.main__info__post .content1 {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.post {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--white);
+}
+
+#post1 img,
+#post2 img,
+#post3 img {
+    width: 283px;
+    height: 348px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    padding: 10px;
+    color: white;
+    text-shadow: 1px 1px 2px black;
+
 }
