--- a/coding/assets/css/login.css
+++ b/coding/assets/css/login.css
@@ -40,6 +40,7 @@
     margin-top: 40px;
     background-color: var(--pointColor);
     color: var(--mainColor);
+    border-radius: 10px;
 }
 
 #login .passwd input {
@@ -49,6 +50,7 @@
     margin-top: 10px;
     background-color: var(--pointColor);
     color: var(--mainColor);
+    border-radius: 10px;
 }
 
 #login .mail input::placeholder {
@@ -66,4 +68,5 @@
     margin-top: 20px;
     background-color: var(--mainColor);
     color: var(--backgroundColor);
+    border-radius: 10px;
 }
